--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,17 @@
     "name": "hexlet/code",
     "autoload": {
         "psr-4": {
-            "Hexlet\\Code\\": "src/"
-        }
+            "Hexlet\\Code\\": "src/",
+            "BrainGames\\Cli\\": "src/",
+            "BrainGames\\Engine\\": "src/",
+            "BrainGames\\Games\\Calc\\": "src/Games/",
+            "BrainGames\\Games\\Even\\": "src/Games/"
+        },
+        "files": [
+            "src/Cli.php",
+            "src/Games/Calc.php",
+            "src/Games/Even.php"
+        ]
     },
     "authors": [
         {
@@ -12,7 +21,14 @@
         }
     ],
     "bin": [
-        "bin/brain-games"
+        "bin/brain-games",
+        "bin/brain-even",
+        "bin/brain-calc"
     ],
-    "require": {}
+    "require": {
+        "wp-cli/php-cli-tools": "^0.12.0"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.10"
+    }
 }
