--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         },
         "files": [
             "src/Cli.php",
+            "src/Engine.php",
             "src/Games/Calc.php",
             "src/Games/Even.php"
         ]
