--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,15 @@
             "BrainGames\\Cli\\": "src/",
             "BrainGames\\Engine\\": "src/",
             "BrainGames\\Games\\Calc\\": "src/Games/",
-            "BrainGames\\Games\\Even\\": "src/Games/"
+            "BrainGames\\Games\\Even\\": "src/Games/",
+            "BrainGames\\Games\\Gcd\\": "src/Games/"
         },
         "files": [
             "src/Cli.php",
             "src/Engine.php",
             "src/Games/Calc.php",
-            "src/Games/Even.php"
+            "src/Games/Even.php",
+            "src/Games/Gcd.php"
         ]
     },
     "authors": [
@@ -24,7 +26,8 @@
     "bin": [
         "bin/brain-games",
         "bin/brain-even",
-        "bin/brain-calc"
+        "bin/brain-calc",
+        "bin/brain-gcd"
     ],
     "require": {
         "wp-cli/php-cli-tools": "^0.12.0"
