--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
             "src/Games/Calc.php",
             "src/Games/Even.php",
             "src/Games/Gcd.php",
-            "src/Games/BrainProgression.php"
+            "src/Games/Progression.php",
+            "src/Games/Prime.php"
         ]
     },
     "authors": [
@@ -26,7 +27,8 @@
         "bin/brain-even",
         "bin/brain-calc",
         "bin/brain-gcd",
-        "bin/brain-progression"
+        "bin/brain-progression",
+        "bin/brain-prime"
     ],
     "require": {
         "wp-cli/php-cli-tools": "^0.12.0"
