--- a/composer.json
+++ b/composer.json
@@ -31,9 +31,11 @@
         "bin/brain-prime"
     ],
     "require": {
-        "wp-cli/php-cli-tools": "^0.12.0"
+        "wp-cli/php-cli-tools": "^0.12.0",
+        "phpstan/phpstan": "^1.0"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "^3.10"
+        "squizlabs/php_codesniffer": "^3.10",
+        "phpstan/phpstan": "^1.11"
     }
 }
